Fix the check